fixed code formatting + deprecation (Integer.valueOf)